--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
 
     <body>
-         This is for the repository.
+        <p> This is for the repository. </p>
+        <h1>This is a header.</h1>
     </body>
 
 </html>
