--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <p> This is for the repository. </p>
         <h1>This is a header.</h1>
+        <h2>This is a second header</h2>
     </body>
 
 </html>
