--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p> This is for the repository. </p>
         <h1>This is a header.</h1>
         <h2>This is a second header</h2>
-        <h3>This is a fifth header</h3>
+        <h3>This is a sixth header</h3>
     </body>
 
 </html>
