--- a/index.html
+++ b/index.html
@@ -5,14 +5,47 @@
     <head>
 
         <title>Exercise 1</title>
-
+        <link href="style.css" rel="stylesheet" type="text/css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-        <p> This is for the repository. </p>
-        <h1>This is a header.</h1>
-        <h2>This is a second header</h2>
-        <h3>This is a fourth header</h3>
+        <div class="maingrid">
+            <div class="box1">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt id tortor congue maximus. In porta libero turpis, ac posuere erat ultricies vitae. Phasellus elementum ligula purus, sit amet rhoncus nulla consequat a. Nunc eget tortor nisi. In ac diam mauris. Aliquam mattis purus a massa dignissim sodales. Cras fringilla mauris ex, sit amet condimentum tortor tristique mollis. Aliquam posuere tristique ipsum non sodales. In facilisis, lacus iaculis tempus commodo, ipsum lorem ultricies urna, vel vestibulum neque augue eu ante. Aliquam eget nisi velit. Maecenas placerat nisi non ex tempus viverra. 
+            </div>
+        </div>
+
+        <div class="maingrid">
+            <div class="box2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt id tortor congue maximus. In porta libero turpis, ac posuere erat ultricies vitae. Phasellus elementum ligula purus, sit amet rhoncus nulla consequat a. Nunc eget tortor nisi. In ac diam mauris. Aliquam mattis purus a massa dignissim sodales. Cras fringilla mauris ex, sit amet condimentum tortor tristique mollis. Aliquam posuere tristique ipsum non sodales. In facilisis, lacus iaculis tempus commodo, ipsum lorem ultricies urna, vel vestibulum neque augue eu ante. Aliquam eget nisi velit. Maecenas placerat nisi non ex tempus viverra. 
+            </div>
+        </div>
+
+        <div class="maingrid">
+            <div class="box2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt id tortor congue maximus. In porta libero turpis, ac posuere erat ultricies vitae. Phasellus elementum ligula purus, sit amet rhoncus nulla consequat a. Nunc eget tortor nisi. In ac diam mauris. Aliquam mattis purus a massa dignissim sodales. Cras fringilla mauris ex, sit amet condimentum tortor tristique mollis. Aliquam posuere tristique ipsum non sodales. In facilisis, lacus iaculis tempus commodo, ipsum lorem ultricies urna, vel vestibulum neque augue eu ante. Aliquam eget nisi velit. Maecenas placerat nisi non ex tempus viverra. 
+            </div>
+        </div>
+
+        <div class="maingrid">
+            <div class="box3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt id tortor congue maximus. In porta libero turpis, ac posuere erat ultricies vitae. Phasellus elementum ligula purus, sit amet rhoncus nulla consequat a. Nunc eget tortor nisi. In ac diam mauris. Aliquam mattis purus a massa dignissim sodales. Cras fringilla mauris ex, sit amet condimentum tortor tristique mollis. Aliquam posuere tristique ipsum non sodales. In facilisis, lacus iaculis tempus commodo, ipsum lorem ultricies urna, vel vestibulum neque augue eu ante. Aliquam eget nisi velit. Maecenas placerat nisi non ex tempus viverra. 
+            </div>
+        </div>
+
+        <div class="maingrid">
+            <div class="box4">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt id tortor congue maximus. In porta libero turpis, ac posuere erat ultricies vitae. Phasellus elementum ligula purus, sit amet rhoncus nulla consequat a. Nunc eget tortor nisi. In ac diam mauris. Aliquam mattis purus a massa dignissim sodales. Cras fringilla mauris ex, sit amet condimentum tortor tristique mollis. Aliquam posuere tristique ipsum non sodales. In facilisis, lacus iaculis tempus commodo, ipsum lorem ultricies urna, vel vestibulum neque augue eu ante. Aliquam eget nisi velit. Maecenas placerat nisi non ex tempus viverra. 
+            </div>
+        </div>
+
+        <div class="maingrid">
+            <div class="box5">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt id tortor congue maximus. In porta libero turpis, ac posuere erat ultricies vitae. Phasellus elementum ligula purus, sit amet rhoncus nulla consequat a. Nunc eget tortor nisi. In ac diam mauris. Aliquam mattis purus a massa dignissim sodales. Cras fringilla mauris ex, sit amet condimentum tortor tristique mollis. Aliquam posuere tristique ipsum non sodales. In facilisis, lacus iaculis tempus commodo, ipsum lorem ultricies urna, vel vestibulum neque augue eu ante. Aliquam eget nisi velit. Maecenas placerat nisi non ex tempus viverra. 
+            </div>
+        </div>
+
     </body>
 
 </html>
